force-app/main/default/objects/blng__PaymentMapping__c/blng__PaymentMapping__c.object-meta.xml
<CustomObject>
    <description>This is an interim object to maintain the relationship of Payment Auth to Quote and Payment Auth to Order as  many-many.</description>
    <label>Payment Mapping</label>
    <nameField>
        <label>Payment Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>