force-app/main/default/objects/blng__PaymentMapping__c/fields/blng__Amount__c.field-meta.xml
<CustomField>
    <fullName>blng__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>