force-app/main/default/objects/blng__PaymentMapping__c/fields/blng__InvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line</label>
    <referenceTo>blng__InvoiceLine__c</referenceTo>
    <relationshipLabel>Payments Mapping</relationshipLabel>
    <relationshipName>Payments_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>