force-app/main/default/objects/blng__PaymentMapping__c/fields/blng__Order__c.field-meta.xml
<CustomField>
    <fullName>blng__Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Payments Mapping</relationshipLabel>
    <relationshipName>Payments_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>