force-app/main/default/objects/blng__PaymentMapping__c/fields/blng__QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>blng__QuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Payments Mapping</relationshipLabel>
    <relationshipName>Payments_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>