force-app/main/default/objects/blng__PaymentMapping__c/fields/blng__Status__c.field-meta.xml
<CustomField>
    <fullName>blng__Status__c</fullName>
    <description>Payment Mapping Status</description>
    <inlineHelpText>Payment Mapping Status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PaymentMappingStatus</valueSetName>
    </valueSet>
</CustomField>